--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,19 @@
-version: '3'
+version: '3.8'
+
 services:
   web:
     build: .
-      ports:
-        -"5000:5000"
-      depends_on:
-        - redis
-      environment:
-        - REDIS_HOST = redis
-      redis:
-        image:"redis:alpine"
-      ports:
-        -"6379:6379"
+    ports:
+      - "5000:5000"
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOST=redis
+    volumes:
+      - .:/app
+
+  redis:
+    image: redis:7
+    ports:
+      - "6380:6379"  # Avoid port conflict if 6379 is already in use
+
